# cyd-fabric

./: .clang-format  CMakeLists.txt  PKGBUILD  README.md
.gitea/workflows/: makepkg.yaml
clang/: CMakeLists.txt
clang/plugins/reflector_plugin/: ASTConsumer.h  CMakeLists.txt  test_plugin.cpp
cmake/: ctest.cmake  docs.cmake
cmake/Modules/: FindCAIROMM.cmake
include/: env.h
include/async/: coroutine_runtime.h  event_queue.h  events.h
include/config/: config_errors.h  config_loader.h  includer.h  variables_t.h
include/cyd_fabric/: env.h  static_assertions.h  type_aliases.h  xdg.h
include/cyd_fabric/async/: async_bus.h  coroutine_runtime.h  coroutines.h  event_queue.h  events.h
include/cyd_fabric/config/: config.h  config_errors.h  config_loader.h  files.h  includer.h  variables_t.h
include/cyd_fabric/logging/: logging.hpp
include/cyd_fabric/memory/: lazy_alloc.h  multidim_data.h
include/cyd_fabric/profiling/: profiling.h
include/cyd_fabric/refl/: match_type.h  refl.h
include/cyd_fabric/templates/: common.h  functor_arguments.h  is_container.h  non_unique_variant.h  ratio.h  template_functor_concept.h  template_str_buffer.h
include/cyd_fabric/testing/: test_enabled.h
include/cyd_fabric/ts/: apply.h  concepts.h  metadata.h  packs.h
include/cyd_fabric/units/: reduce_rules.h  units.h
include/cyd_fabric/units/scales/: angle_scale.h  distance_scale.h  mass_scale.h  speed_scale.h  time_scale.h  volume_scale.h
include/cyd_fabric_modules/: char_utils.cppm  type_aliases.cppm
include/cyd_fabric_modules/async/: async_bus.cppm  coroutine_runtime.cppm  coroutines.cppm  event_queue.cppm  events.cppm
include/cyd_fabric_modules/async/ebus/: @index.cppm  _concepts.cppm  _types.cppm  ebus.cppm  ebus_actor.cppm  ebus_runner.cppm  event.cppm  event_emitter.cppm  event_listener.cppm  raw_listener.cppm  typed_listener.cppm
include/cyd_fabric_modules/headers/: units_includes.h  units_preface.h
include/cyd_fabric_modules/headers/macros/: async_events.h  test_enabled.h  units.h
include/cyd_fabric_modules/linalg/: concepts.cppm  integrators.cppm  linalg.cppm  matrix.cppm  vector.cppm  with_precision.cppm
include/cyd_fabric_modules/logging/: command_base.cppm  context.cppm  filter.cppm  initializer.cppm  log_entry.cppm  log_levels.cppm  logging.cppm  target_base.cppm
include/cyd_fabric_modules/logging/commands/: print.cppm  stacktrace.cppm
include/cyd_fabric_modules/logging/targets/: file.cppm  stderr.cppm  stdout.cppm
include/cyd_fabric_modules/math/: expressions.cppm
include/cyd_fabric_modules/memory/: circular_buffer.cppm  lazy_alloc.cppm  multidim_data.cppm  ring_buffer.cppm
include/cyd_fabric_modules/profiling/: profiling.cppm
include/cyd_fabric_modules/reflection/: _types.cppm  accessors.cppm  equality.cppm  formatters.cppm  pretty_print.cppm  refl.cppm  serializer.cppm  type_name.cppm
include/cyd_fabric_modules/templates/: functor_arguments.cppm  ratio.cppm  template_functor_concept.cppm  template_str_buffer.cppm
include/cyd_fabric_modules/ts/: any.cppm  apply.cppm  metadata.cppm  packs.cppm
include/cyd_fabric_modules/units/: concepts.cppm  frac.cppm  mul.cppm  preface.cppm  quantity.cppm  reduce_rules.cppm  units.cppm  units_core.cppm
include/cyd_fabric_modules/units/scales/: angle.cppm  distance.cppm  mass.cppm  scales.cppm  speed.cppm  temperature.cppm  time.cppm  volume.cppm
include/cyd_fabric_modules/units/scales/base_units/: angle.cppm  distance.cppm  electric_current.cppm  light_intensity.cppm  mass.cppm  substance.cppm  temperature.cppm  time.cppm
include/cyd_fabric_modules/units/scales/derived_units/: absorbed_dose.cppm  catalytic_activity.cppm  dose_equivalent.cppm  electric_capacitance.cppm  electric_charge.cppm  electric_conductance.cppm  electric_resistance.cppm  emf.cppm  energy.cppm  force.cppm  frequency.cppm  illuminance.cppm  inductance.cppm  luminous_flux.cppm  magnetic_flux.cppm  magnetic_flux_density.cppm  power.cppm  pressure.cppm  radionuclide_activity.cppm  solid_angle.cppm  speed.cppm  volume.cppm
include/cyd_fabric_modules/wiring/signals/: @index.cppm  _concepts.cppm  _ts.cppm  _types.cppm  auto_disconnect.cppm  connection.cppm  inout_signal.cppm  private_signal.cppm  signal.cppm  slot.cppm
include/refl/: refl.h
src/: main.cpp
src/async/: events.cpp
test/: logging_module.cpp  signals.cpp  units.cpp  units_module.cpp
test/async/: async_bus.cpp  coroutine_rt.cpp  event_queue.cpp
test/common/: async.h  common.h  tests_structure.h
test/logging/: initialization.cpp  logging_module.cpp
test/refl/: refl.cpp  refl2.cpp
test/ts/: any.cpp
